# volition

./: .gitignore  .gitmodules  README.md  Volition.geany  example_compile.sh
certs/: genkeys.sh
scripts/: cmodtests.lua  fltktest.lua  loadtest.lua  n2ntest.lua  scripting_selftest.lua  tumorloader.lua  workertest.lua  ziggurat.lua
src/: Makefile  Security.mk
src/control/: CMakeLists.txt  Makefile  clienttracker.cpp  clienttracker.h  cmdhandling.cpp  cmdhandling.h  config.cpp  config.h  gui_base.cpp  gui_base.h  gui_dialogs.cpp  gui_dialogs.h  gui_icons.cpp  gui_icons.h  gui_mainwindow.cpp  gui_mainwindow.h  gui_menus.cpp  gui_menus.h  interface.cpp  interface.h  main.cpp  main.h  mediarecv.cpp  mediarecv.h  orders.cpp  orders.h  scriptscanner.cpp  scriptscanner.h  ticker.cpp  ticker.h
src/control/win32/: win.rc
src/extensions/vlfltk/: CMakeLists.txt
src/extensions/ziggurat/: CMakeLists.txt  luadelegate.cpp  notifications.cpp  widgets.cpp  zigapp.h  ziggurat.h  zigmain.cpp  zigmainwindow.ui  zigmessenger.ui  zigresources.qrc  zigtextchooser.ui  zigui.ui
src/extensions/ziggurat/win32/: win.rc
src/libvolition/: CMakeLists.txt  Makefile  brander.cpp  common_introspect.cpp  conation.cpp  netcore.cpp  netscheduler.cpp  utils.cpp  vlstrings.cpp  vlthreads.cpp
src/libvolition/include/: brander.h  commandcodes.h  common.h  conation.h  netcore.h  netscheduler.h  utils.h  vldebug.h  vlstrings.h  vlthreads.h
src/node/: CMakeLists.txt  Makefile  cmdhandling.cpp  cmdhandling.h  files.cpp  files.h  identity_module.cpp  identity_module.h  interface.cpp  interface.h  jobs.cpp  jobs.h  luaffi_prelude.h  main.cpp  main.h  processes.cpp  processes.h  script.cpp  script.h  updates.cpp  updates.h  web.cpp  web.h
src/node/brander/: Makefile  brander.cpp
src/node/luaffi/: gen.sh
src/node/win32/: win.rc
src/server/: CMakeLists.txt  Makefile  clients.cpp  clients.h  cmdhandling.cpp  cmdhandling.h  core.cpp  core.h  db.cpp  db.h  logger.cpp  logger.h  nodeupdates.cpp  nodeupdates.h  routines.cpp  routines.h
src/server/win32/: Makefile  win.rc
src/utils/: CMakeLists.txt  Makefile  brander.cpp  genauthtoken.cpp  tumoreditor.cpp
